--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                  <div class="form-header">
                      Message Me
                  </div>
-                 <form action="https://formsubmit.co/annmarieaddatu22@gmail.com" method="POST" >
+                 <form action="https://formsubmit.co/a6b9ed8c1f081f07570d227bf3ec8c60" method="POST" >
                     <div class="input-line">
                         <input  id="name" type="text" placeholder="Name" class="input-name" maxlength="20" required >
                         <input id="email" type="email" placeholder="Email"  class="input-name"  maxlength="20" required>
