I Changed the URL in my Portfolio section which is NSB-MEDIA

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <h2>NSB-Media: Revolutionizing Social Media Marketing Website</h2>
                         <p>This website is for digital media marketing and showcases their services. I created the design using Figma and converted it into web development on WordPress. Additionally, I incorporated features based on the client's preferences, such as a multilingual plugin for translation between English and German. I also intregrate a booking feature for a free 30-minute call using the Zoom application.</p>
                         <p class="skills-dev">HTML | CSS | BOOTSTRAP | JAVASCRIPT | JQUERY | PHP | FIGMA | ADOBE PHOTOSHOP | UI DESIGN | WEB DESIGN | FRONT-END DEVELOPEMENT | WORDPRESS | WEBSITE</p>
-                        <div class="button"><a href="https://nsb-media.com/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://noah-first-project.cyberwrath.tech/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
 
