Change URL DOWNLOAD CV HERE BUTTON in index.html
I change the link because a while ago, i put a mistake url in the 'DOWNLOAD CV HERE BUTTON'

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <!--START: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
     <script>
         function myFunction() {
-          window.open("https://drive.google.com/drive/u/1/folders/1or3tQX2eBR8RUKerREDGdwvgtjH3f1or");
+          window.open("https://drive.google.com/drive/u/1/home");
         }
     </script>      
     <!--END: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
