I change the google drive URL in DOWNLOAD CV BUTTON in index.html
REASONE CHANGE: I already updated my resume for 2024

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <!--START: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
     <script>
         function myFunction() {
-          window.open("https://drive.google.com/drive/u/1/home");
+          window.open("https://drive.google.com/file/d/1nN8pIysRoLwKg42ACnbHjzlFbe1A0DUH/view?usp=sharing");
         }
     </script>      
     <!--END: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
