--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <!--about description-->
                         <span class ="header-caption">As a Freelance Front End and WordPress Developer, I have expertise in HTML, CSS, JavaScript, and Bootstrap. I specialize in creating user-friendly and responsive designs. I create custom WordPress themes from scratch and add plugins, including ACF plugins, to enhance functionality. 
 			Currently, I'm expanding my skills in hosting, domain management, API integration, server management, web security, site optimization, and site maintenance. This is my goal, to become a Full Stack Developer in the future.
-			I'm also open to being a QA Tester if there are entry level position available, I'm willing to learn about it as well.</span>
+			<br><br>I'm also open to being a QA Tester if there are entry level position available, I'm willing to learn about it as well.</span>
                     </div>
                     <!--about picture-->
                     <!-- <div class="about-img">
