Remove  maxlength in input email contact section

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                  <form action="https://formsubmit.co/a6b9ed8c1f081f07570d227bf3ec8c60" method="POST" >
                     <div class="input-line">
                         <input  id="name" type="text" placeholder="Name" class="input-name" maxlength="20" required >
-                        <input id="email" type="email" placeholder="Email"  class="input-name"  maxlength="20" required>
+                        <input id="email" type="email" placeholder="Email"  class="input-name" required>
                     </div>
                     <input type="text" id="subject" placeholder="Subject" class="input-subject">
                     <textarea id ="body" class="input-textarea" placeholder="Message"></textarea>
