ADD SECTION FOR PORTFOLIO
2 additional portfolio

--- a/index.html
+++ b/index.html
@@ -275,8 +275,33 @@
                         <div class="button"><a href="https://www.figma.com/proto/ix5unDjX86KVjApDDj60jA/My-Portfolio---Ann-Marie-Kristine-Addatu?node-id=22-197" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
+
+		<div class="portfolio portfolio-third">
+                     <div class="portfolio-image">
+                        <img src="images/E-Learning.jpg" alt="portfolio-first">
+                     </div>
+                     <div class="portfolio-text">
+                         <h2>E-Learning Web Development and Design</h2>
+                         <p>This website is my first project. I designed it from scratch using Figma and converted it into a working site. The site is static and exhibits responsiveness as well.</p>
+                         <p class="skills-dev">HTML | CSS | BOOTSTRAP | JAVASCRIPT | JQUERY | FIGMA | UI DESIGN | WEB DESIGN | WEBSITE</p>
+                         <div class="button"><a href="https://ann-marie-first-training-project.cyberwrath.tech/project1/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                     </div>
+                 </div>
+
+
+		<div class="portfolio portfolio-fourth">
+                     <div class="portfolio-image">
+                        <img src="images/E-Learning.jpg" alt="portfolio-first">
+                     </div>
+                     <div class="portfolio-text">
+                         <h2>E-Learning Web Development and Design</h2>
+                         <p>This website is my first project. I designed it from scratch using Figma and converted it into a working site. The site is static and exhibits responsiveness as well.</p>
+                         <p class="skills-dev">HTML | CSS | BOOTSTRAP | JAVASCRIPT | JQUERY | FIGMA | UI DESIGN | WEB DESIGN | WEBSITE</p>
+                         <div class="button"><a href="https://ann-marie-first-training-project.cyberwrath.tech/project1/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                     </div>
+                 </div>
              
-                <div class="portfolio portfolio-third">
+                <div class="portfolio portfolio-fifth">
                     <div class="portfolio-image">
                         <img src="images/Dr Drobot.jpg" alt="portfolio-third">
                     </div>
@@ -288,7 +313,9 @@
                     </div>
                 </div>
 
-                <div class="portfolio portfolio-fourth">
+		 
+
+                <div class="portfolio portfolio-sixth">
                     <div class=" portfolio-image">
                         <img src="images/ARRS.jpg" alt="portfolio-fourth">
                     </div>
@@ -300,7 +327,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio portfolio-fifth">
+                <div class="portfolio portfolio-seventh">
                     <div class=" portfolio-image">
                         <img src="images/NSB-MEDIA.jpg" alt="portfolio-fifth">
                     </div>
@@ -312,7 +339,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio portfolio-sixth">
+                <div class="portfolio portfolio-eight">
                     <div class=" portfolio-image">
                         <img src="images/Chinook.jpg" alt="portfolio-sixth">
                     </div>
@@ -324,7 +351,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio portfolio-seventh">
+                <div class="portfolio portfolio-nineth">
                     <div class=" portfolio-image">
                         <img src="images/Finacebox.jpg" alt="portfolio-seventh">
                     </div>
@@ -336,7 +363,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio portfolio-eighth">
+                <div class="portfolio portfolio-tenth">
                     <div class=" portfolio-image">
                         <img src="images/KDM.jpg" alt="portfolio-eighth">
                     </div>
