Update url of Barbershop and Search portfolio

--- a/index.html
+++ b/index.html
@@ -284,20 +284,20 @@
                          <h2>Barbershop</h2>
                          <p>This barbershop website is based on a YouTuber's tutorial, but I made some adjustments, including changing the images. The coding is done using the tutorial, and it is also responsive using CSS.</p>
                          <p class="skills-dev">HTML | CSS | JAVASCRIPT | JQUERY | WEBSITE</p>
-                         <div class="button"><a href="https://ann-marie-first-training-project.cyberwrath.tech/project1/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <div class="button"><a href="https://annmarieaddatu.github.io/Barber-Shop-Website/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
 
 
 		<div class="portfolio portfolio-fourth">
                      <div class="portfolio-image">
-                        <img src="images/SEARCH PROJECT.jpg" alt="portfolio-first">
+                        <img src="images/Search.jpg" alt="portfolio-first">
                      </div>
                      <div class="portfolio-text">
                          <h2>Southeast Asia Regional Collaborative for Health</h2>
                          <p>This is a website for my client, and I created it in WordPress using Avada for customization. I also used ACF for the homepage. For the Affiliate/Associate/Membership sections, I used FormCraft because my client wanted a simple form. The map is also a custom type.</p>
                          <p class="skills-dev">HTML | CSS | BOOTSTRAP | FIGMA | UI DESIGN | WEB DESIGN | WEBSITE | CUSTOMTYPE</p>
-                         <div class="button"><a href="https://ann-marie-first-training-project.cyberwrath.tech/project1/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <div class="button"><a href="https://capucine-first-project.cyberwrath.tech/" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
              
