--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 		<div class="portfolio portfolio-third">
                      <div class="portfolio-image">
-                        <img src="images/Barbershop.jpg" alt="portfolio-first">
+                        <img src="images/Barbershop.bmp" alt="portfolio-first">
                      </div>
                      <div class="portfolio-text">
                          <h2>Barbershop</h2>
