--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <div class="about-main">
                     <div class="about-first-paragraph wow">
                         <!--about description-->
-                        <span class ="header-caption">As a Freelance Front End and WordPress Developer, I have expertise in HTML, CSS, JavaScript, and Bootstrap. I specialize in creating user-friendly and responsive designs. I create custom WordPress themes from scratch and add plugins, including ACF plugins, to enhance functionality. 
-			Currently, I'm expanding my skills in hosting, domain management, API integration, server management, web security, site optimization, and site maintenance. This is my goal, to become a Full Stack Developer in the future.
-			<br><br>I'm also open to being a QA Tester if there are entry level position available, I'm willing to learn about it as well.</span>
+                        <span class ="header-caption">As a Front End/WordPress Developer, I have expertise in HTML, CSS, JavaScript, and Bootstrap. I specialize in creating user-friendly and responsive designs. I create custom WordPress themes from scratch and add plugins, including ACF plugins, to enhance functionality. I also offer web security, site optimization, and site maintenance.
+			Currently, I'm expanding my skills in hosting, domain management, API integration, server management, This is my goal, to become a Full Stack Developer in the future.
+			<br><br>I'm also open to being a QA Tester if there are entry level position available, I'm willing to learn about it as well</span>
                     </div>
                     <!--about picture-->
                     <!-- <div class="about-img">
