--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <!--START: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
     <script>
         function myFunction() {
-          window.open("");
+          window.open("https://drive.google.com/file/d/1pXLLqtAXM8U14V3xhBz0M8pGDdqR_olS/view?usp=sharing");
         }
     </script>      
     <!--END: ADDITIONAL SCRIPT FOR ONCLICK DOWNLOAD CV NEW TAB-->
